--- a/app/views/hub/choose-a-company.html
+++ b/app/views/hub/choose-a-company.html
@@ -15,15 +15,28 @@
         <span class="heading-secondary">Step 1. Choose the digital identity you want to set up</span>
         Digital Identities </h1>
 
-        <p>You don’t have to be an existing customer as they’ve all built new, secure systems in order to verify identities. The account you choose asks you for some personal details and checks them against records held by mobile phone providers, credit agencies, HM Passport Office or DVLA.</p>
+        <p>You don’t have to be an existing customer as they’ve all built new, secure systems in order to verify identities. The account you choose asks you for some personal details and checks them against records held by {% if data['passport'] == 'true' %}HM Passport Office, {% endif %}{% if data['drivingLicence'] == 'true' %}DVLA, {% endif %}mobile phone providers, or credit agencies.</p>
 
-        <p>Because you have a 
+        <p>
 
-        <!-- {% if data['passport'] == 'true' %}
-        passport
+        {% if (data['passport'] == 'true') or (data['drivingLicence'] == 'true') %}
+          Because you have a
         {% endif %}
- -->
-        [driving licence and a passport], you can set up one of these digital identities:</p>
+        {% if data['passport'] == 'true' %}
+          passport
+        {% endif %}
+        {% if (data['passport'] == 'true') and (data['drivingLicence'] == 'true') %}
+        and
+        {% endif %}
+        {% if data['drivingLicence'] == 'true' %}
+          driving licence
+        {% endif %}
+        {% if (data['passport'] == 'true') or (data['drivingLicence'] == 'true') %}
+          you can use any of the following digital identities:
+        {% endif %}
+
+      </p>
+ 
 
         {{ formData | safe }}
 
