--- a/app/views/hub/sm-signin.html
+++ b/app/views/hub/sm-signin.html
@@ -23,8 +23,8 @@
         <p>To set up a digital identity you need to:</p>
 
         <ul class="list list-bullet">
-          <li>Be over 18 years old</li>
-          <li>Have a UK address</li>
+          <li>be over 18 years old</li>
+          <li>have a UK address</li>
         </ul>
 
         <form id="" class="js-validate" novalidate="novalidate" action="/hub/setting-up-verify{{formQuery}}" accept-charset="UTF-8" method="get">
@@ -33,7 +33,7 @@
           <input type="hidden" name="registration" value="true">
         </form>
         <br>
-        <p>Or <a href="/hub/other-ways">view other ways to access the service</a></p>
+        <p>or <a href="/hub/other-ways">view other ways to access the service</a></p>
          
       </div>
       <div class="column-half">
