--- a/app/views/service/check-state-pension-start.html
+++ b/app/views/service/check-state-pension-start.html
@@ -23,7 +23,7 @@
       
       <div class="sign-in-wrap">
         <div class="button-wrap">
-          <a class="button button-start" href="/hub/slide-start{{formQuery}}">
+          <a class="button button-start" href="/hub/sm-signin{{formQuery}}">
             <strong>Start now</strong>
           </a>
         </div>
