--- a/app/views/index.html
+++ b/app/views/index.html
@@ -21,10 +21,18 @@
           <input type="submit" formaction="/service/view-driving-licence-start?requestId=view-share-driving-licence" value="View or share your driving licence information" class="button" id="next-button">
 
           <h2 class="heading-medium">LOA2 services</h2>
+          
           <input type="submit" formaction="/service/check-state-pension-start?requestId=check-state-pension" value="Check your state pension" class="button" id="next-button">
+          
           <input type="submit" formaction="/service/personal-tax-account-start?requestId=personal-tax-account" value="Personal tax account" class="button" id="next-button">
+          
+          <input type="submit" formaction="/service/renew-apply-passport-start?requestId=passport" value="Renew or apply for a passport" class="button" id="next-button">
+
+          <input type="submit" formaction="/service/renew-driving-licence-start?requestId=renew-driving-licence" value="Renew your driving licence" class="button" id="next-button">
+
         </div>
       </div>
+
       <div class="column-half">
 
       <div id="usersLOA">
