Fixed flow for IDP journey

--- a/app/views/idp/choose-id.html
+++ b/app/views/idp/choose-id.html
@@ -45,6 +45,11 @@
           <a class="button" href="/idp/non-uk-passport{{formQuery}}">Non-UK Passport, ID or driving licence</a>
         </div>
       </div>
+      <div class="column-half">
+        <div class="evidence-container" style="height: 177px">
+          <p  style="padding: 20% 0;"><a class="" href="/idp/choose-proof-of-address{{formQuery}}">I don't have any of these documents</a></p>
+        </div>
+      </div>
 		</div>
 	</div>
 </main>
