--- a/app/views/idp/sign-up.html
+++ b/app/views/idp/sign-up.html
@@ -54,7 +54,7 @@
 						</div>
 					</div>
 					
-					<p>If you don't already have a {{idpName}} digital identity you can <a href="{{baseURL}}/input-email{{formQuery}}">create an account</a>.</p>
+					<p>If you already have a {{idpName}} digital identity you can <a href="{{baseURL}}/sign-in{{formQuery}}">sign in</a>.</p>
 
 				</form>
 				
