--- a/app/views/hub/choose-a-company.html
+++ b/app/views/hub/choose-a-company.html
@@ -12,28 +12,30 @@
     {% include "includes/verify-logo.html" %}
     <div class="column-two-thirds">
   		<h1 class="heading-large">
-        <span class="heading-secondary">Step 1. Choose the digital identity you want to set up</span>
+        <span class="heading-secondary">Step 1. Choose a digital identity</span>
         Digital Identities </h1>
 
-        <p>You don’t have to be an existing customer as they’ve all built new, secure systems in order to verify identities. The account you choose asks you for some personal details and checks them against records held by {% if data['passport'] == 'true' %}HM Passport Office, {% endif %}{% if data['drivingLicence'] == 'true' %}DVLA, {% endif %}mobile phone providers, or credit agencies.</p>
+        <p>You don’t have to be an existing customer as they’ve all built new, secure systems in order to verify identities -  you’ll be asked for some personal details that will be checked against records held by {% if data['passport'] == 'true' %}HM Passport Office, {% endif %}{% if data['drivingLicence'] == 'true' %}DVLA, {% endif %}mobile phone providers, or credit agencies.</p>
 
         <p>
-
-        {% if (data['passport'] == 'true') or (data['drivingLicence'] == 'true') %}
-          You can use any of the following digital identities because you have:
+          You can set up any of these digital identities because you have:
           <ul class="list list-bullet">
-            
-          
-        {% endif %}
         {% if data['passport'] == 'true' %}
           <li>a passport</li>
         {% endif %}
         {% if data['drivingLicence'] == 'true' %}
           <li>a driving licence</li>
         {% endif %}
-        {% if (data['passport'] == 'true') or (data['drivingLicence'] == 'true') %}
-          </ul>
+        {% if data['non_uk_id'] == 'true' %}
+          <li>a non-UK identity document</li>
         {% endif %}
+        {% if data['non_uk_id'] == 'true' %}
+          <li>a smartphone or tablet</li>
+        {% else %}
+          <li>a mobile phone</li>
+        {% endif %}
+
+        <ul>
 
       </p>
  
