--- a/app/views/hub/select-other-documents.html
+++ b/app/views/hub/select-other-documents.html
@@ -11,11 +11,11 @@
   <div class="grid-row">
     <div class="column-two-thirds">
   		<h1 class="heading-large">
-        <span class="heading-secondary">Step 1. Choose the digital identity you want to set up</span>
+        <span class="heading-secondary">Step 1. Choose a digital identity</span>
         Other identity documents
       </h1>
 
-      <p>Some digital identities can use identity documents from other countries.</p>
+      <p>You can use identity documents from other countries to set up some digital identities.</p>
 
       <form action="/hub/choose-a-company{{formQuery}}">
         {{formData | safe}}
@@ -37,8 +37,8 @@
             <div class="panel panel-border-narrow js-hidden" id="non-uk-doc">
               
               <legend class="heading-small">
-                Can you download an app to take a picture of your document?
-                <span class='form-hint'>You may need to download a free app and use your phone's camera as part of setting up your digital identity.</span>
+                Can you download an app to your smartphone or tablet?
+                <span class='form-hint'>You will need to download a free app and use your device's camera to take a photo of your identity document and a selfie.</span>
               </legend>
 
               <div class="multiple-choice" data-target="">
