--- a/app/views/hub/setting-up-verify.html
+++ b/app/views/hub/setting-up-verify.html
@@ -37,14 +37,14 @@
 				
 				<dt>2.</dt>
 				<dd>
-					<span class="step-heading">Confirm your details to set up your digital identity.</span>
+					<span class="step-heading">Confirm your details to prove your identity.</span>
 					<details>
 					  <summary><span class="summary">More information</span></summary>
   					<div class="panel panel-border-narrow">
   						
 						  <p>The first first thing you will do is create a username and password. This is so you can reuse your digital identity wherever you see the GOV.UK Verify logo.</p>
 
-						  <p>You need to provide some personal details, including identity documents if you have them, so they can be double checked against records held by mobile phone providers, credit agencies, HM Passport Office or DVLA for example.</p>
+						  <p>You need to provide some personal details, including identity documents if you have them, and your bank or credit card details. These will be double checked against records held by mobile phone providers, banks and credit agencies, HM Passport Office or DVLA for example.</p>
 
   					</div>
   				</details>
@@ -54,13 +54,13 @@
 				
 				<dt>3.</dt>
 				<dd>
-					<span class="step-heading">Continue to GOV.UK to access {{serviceNameLower}}.</span>
+					<span class="step-heading">Continue to GOV.UK to {{serviceNameLower}}.</span>
 					
 					<details>
 					  <summary><span class="summary">More information</span></summary>
   					<div class="panel panel-border-narrow">
   						
-						  <p>When your digital identity is set up, you will be sent  back to GOV.UK so you can safely and securely {{serviceNameLower}}.</p>
+						  <p>When your digital identity is set up, you’ll be sent back to GOV.UK so you can safely and securely {{serviceNameLower}}.</p>
 
 						  <p>You only need to set up one digital identity, next time you just sign in with your username and password.</p>
 
@@ -81,7 +81,32 @@
 			  </div>
 			</form>
 
+ <details role="group">
+        <summary role="button" aria-controls="details-content-0" aria-expanded="false">
+          <span class="summary">Where can I use my digital identity?</span>
+        </summary>
+        <div class="panel panel-border-narrow" id="details-content-0" aria-hidden="true">
+          <p>You can use your digital identity to:</p>
+          <ul class="list list-bullet">
+            <li>complete your Self Assessment</li>
+            <li>check your State Pension</li>
+            <li>sign in to your personal tax account</li>
+            <li>view or share your driving licence information</li>
+            <li>complete your claim or access your Universal Credit account</li>
+            <li>claim your redundancy payment and monies owed</li>
+            <li>check your income tax for the current year</li>
+            <li>report a medical condition that affects your driving</li>
+            <li>renew your short-term medical driving licence</li>
+            <li>check or update your company car tax</li>
+            <li>use Rural Payments</li>
+            <li>help friends and family with their tax</li>
+            <li>apply for a vehicle operator licence</li>
+            <li>request a basic DBS check</li>
+            
 
+          </ul>
+        </div>
+      </details>
     </div>
   </div>
 </main>
