--- a/app/views/hub/verify-success.html
+++ b/app/views/hub/verify-success.html
@@ -17,7 +17,7 @@
 		Your digital identity
 	</h1>
 
-	<p>You’ve set up your digital identity with {{idpAccountName}} so now you can continue to {{serviceNameLower}}
+	<p>You’ve set up your {{idpAccountName}} digital identity so now you can continue to {{serviceNameLower}}
 </p>
 
   <p>In the future you can use your digital identity wherever you see the GOV.UK Verify logo.</p>
