--- a/app/views/hub/sm-signin.html
+++ b/app/views/hub/sm-signin.html
@@ -12,15 +12,14 @@
     <div class="grid-row">      
         <div class="column-two-thirds" style="">
               
-          <h1 class="heading-large">Set up or sign in with an<br> digital identity</h1>
+          <h1 class="heading-large">{{serviceName}} with your digital identity</h1>
         </div>
     </div>
     <div class="grid-row">
       <div class="column-half">
         <h2 class="heading-medium">Set up a digital identity</h2>
         <p>Set up a digital identity so you can securely sign in to {{serviceNameLower}}.</p>
-
-        <p>To set up a digital identity you need to:</p>
+        <p>If you don’t have a digital identity, you can set one up here. You need to:</p>
 
         <ul class="list list-bullet">
           <li>be over 18 years old</li>
@@ -37,8 +36,8 @@
          
       </div>
       <div class="column-half">
-          <h2 class="heading-medium">Sign in with your digital identity</h2>
-          <p>Sign in with a digital identity that you set up in the past.</p>
+          <h2 class="heading-medium">If you already have a digital identity</h2>
+          <p>Sign in with:</p>
 
 
           {{formData | safe}}
