--- a/app/views/hub/verify-success.html
+++ b/app/views/hub/verify-success.html
@@ -14,7 +14,7 @@
 
 	<h1 class="heading-large">
 	  <span class="heading-secondary">Step 3. Continue to {{serviceNameLower}}</span>
-		Your digital identity
+		You've set up your digital identity
 	</h1>
 
 	<p>You’ve set up your {{idpAccountName}} digital identity so now you can continue to {{serviceNameLower}}.</p>
