--- a/app/views/hub/choose-a-company.html
+++ b/app/views/hub/choose-a-company.html
@@ -15,7 +15,7 @@
         <span class="heading-secondary">Step 1. Choose a digital identity</span>
         Digital Identities </h1>
 
-        <p>You don’t have to be an existing customer as they’ve all built new, secure systems in order to verify identities -  you’ll be asked for some personal details that will be checked against records held by {% if data['passport'] == 'true' %}HM Passport Office, {% endif %}{% if data['drivingLicence'] == 'true' %}DVLA, {% endif %}mobile phone providers, or credit agencies.</p>
+        <p>You don’t have to be an existing customer as they’ve all built new, secure systems in order to verify identities -  you’ll be asked for some personal details that will be checked against records held by {% if data['passport'] == 'true' %}HM Passport Office, {% endif %}{% if data['drivingLicence'] == 'true' %}DVLA, {% endif %}mobile phone providers, banks or credit agencies.</p>
 
         <p>
           You can set up any of these digital identities because you have:
