--- a/app/views/hub/choose-a-company.html
+++ b/app/views/hub/choose-a-company.html
@@ -11,9 +11,7 @@
   <div class="grid-row">
     {% include "includes/verify-logo.html" %}
     <div class="column-two-thirds">
-  		<h1 class="heading-large">
-        <span class="heading-secondary">Step 1. Choose a digital identity</span>
-        Digital Identities </h1>
+  		<h1 class="heading-large">Choose a company to verify your identity</h1>
 
         <p>You don’t have to be an existing customer as they’ve all built new, secure systems in order to verify identities -  you’ll be asked for some personal details that will be checked against records held by {% if data['passport'] == 'true' %}HM Passport Office, {% endif %}{% if data['drivingLicence'] == 'true' %}DVLA, {% endif %}mobile phone providers, banks or credit agencies.</p>
 
