--- a/app/views/hub/redirect-to-idp.html
+++ b/app/views/hub/redirect-to-idp.html
@@ -13,8 +13,7 @@
 
     <div class="column-two-thirds">
       <h1 class="heading-large">
-        <span class="heading-secondary">Step 2. Confirm your details</span>
-        Set up your {{idpAccountName}} digital identity
+        Create your {{idpName}} identity account
       </h1>
 
         <p>We'll now send you to {{idpName}}’s website.</p>
@@ -37,9 +36,9 @@
           {% endif %}
         </ul>
 
-        <p>When you’ve set up your digital identity, {{idpAccountName}} will send you back to GOV.UK so you can do step 3 – {{serviceNameLower}}.</p>
+        <p>They'll give you an identity account you can use wherever you see the GOV.UK Verify logo.</p>
 
-        <p>In the future you can use your digital identity wherever you see the GOV.UK Verify logo.</p>
+        <p>You'll then be able to sign in to {{serviceNameLower}}</p>
 
         <form action="{{idpRoot}}sign-up{{formQuery}}">
 
