--- a/app/views/hub/verify-success.html
+++ b/app/views/hub/verify-success.html
@@ -12,10 +12,7 @@
  		<div class="column-two-thirds">
   		
 
-	<h1 class="heading-large">
-	  <span class="heading-secondary">Step 3. Continue to {{serviceNameLower}}</span>
-		You've set up your digital identity
-	</h1>
+	<h1 class="heading-large">You've set up your digital identity</h1>
 
 	<p>You’ve set up your {{idpAccountName}} digital identity so now you can continue to {{serviceNameLower}}.</p>
 
