--- a/app/views/hub/create-account.html
+++ b/app/views/hub/create-account.html
@@ -18,7 +18,7 @@
 
       <p>You can choose to create a Government Gateway or GOV.UK Verify. You’ll be able to apply for a basic criminal record check with either account.</p>
 
-      <!-- <p><a href="/eidas/pick-country">I have another Europea digital identity</a></p> -->
+      <!-- <p><a href="/eidas/pick-country">I have another Europea identity account</a></p> -->
 
    </div>
   </div>
@@ -27,7 +27,7 @@
         <table>
         <tr>
           <td class="heading-medium table-body">Government Gateway</td>
-          <td class="heading-medium table-body">GOV.UK Verify digital identitys</td>
+          <td class="heading-medium table-body">GOV.UK Verify identity accounts</td>
         </tr>
         <tr>
           <td>
@@ -46,7 +46,7 @@
           </td>
           <td>
             <div class="heading-small">What you need</div>
-            <p>a GOV.UK Verify digital identity requires you to:</p>
+            <p>a GOV.UK Verify identity account requires you to:</p>
             <ul class="list list-bullet">
               <li>have a UK address</li>
               <li>be over 18 years old</li>
@@ -56,7 +56,7 @@
               <li>a valid passport</li>
               <li>a driving licence</li>
             </ul>
-            <a href="/hub/sm-signin{{formQuery}}" class="button">Create a GOV.UK Verify digital identity</a>
+            <a href="/hub/sm-signin{{formQuery}}" class="button">Create a GOV.UK Verify identity account</a>
             <br>
             <br>
           </td>
@@ -79,7 +79,7 @@
           </td>
           <td>
             <div class="heading-small">How it works</div>
-            You'll create a digital identity certified by GOV.UK Verify to securely access {{serviceNameLower}}
+            You'll create a identity account certified by GOV.UK Verify to securely access {{serviceNameLower}}
           </td>
         </tr>
       </table>
