--- a/app/views/hub/setting-up-verify.html
+++ b/app/views/hub/setting-up-verify.html
@@ -11,21 +11,21 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
-			<h1 class="heading-large">Setting up your digital identity</h1>
+			<h1 class="heading-large">Setting up your identity account</h1>
 
-			<p>3 steps to set up your digital identity:</p>
+			<p>3 steps to set up your identity account:</p>
 			<dl class="steps-list">
 				<dt>1.</dt>
 				<dd>
-					<span class="step-heading">Choose the digital identity you want to set up.</span>
+					<span class="step-heading">Choose the identity account you want to set up.</span>
 
 					<details>
 					  <summary><span class="summary">More information</span></summary>
   					<div class="panel panel-border-narrow">
 													
-						  <p>Each digital identity has different requirements, so we’ll ask you some questions so we can list the ones that will work for you. </p>
+						  <p>Each identity account has different requirements, so we’ll ask you some questions so we can list the ones that will work for you. </p>
 
-						  <p>When you choose the digital identity you want to set up, we’ll send you to their website.</p>
+						  <p>When you choose the identity account you want to set up, we’ll send you to their website.</p>
 
   					</div>
   				</details>
@@ -40,7 +40,7 @@
 					  <summary><span class="summary">More information</span></summary>
   					<div class="panel panel-border-narrow">
   						
-						  <p>The first first thing you will do is create a username and password. This is so you can reuse your digital identity wherever you see the GOV.UK Verify logo.</p>
+						  <p>The first first thing you will do is create a username and password. This is so you can reuse your identity account wherever you see the GOV.UK Verify logo.</p>
 
 						  <p>You need to provide some personal details, including identity documents if you have them, and your bank or credit card details. These will be double checked against records held by mobile phone providers, banks and credit agencies, HM Passport Office or DVLA for example.</p>
 
@@ -58,9 +58,9 @@
 					  <summary><span class="summary">More information</span></summary>
   					<div class="panel panel-border-narrow">
   						
-						  <p>When your digital identity is set up, you’ll be sent back to GOV.UK so you can safely and securely {{serviceNameLower}}.</p>
+						  <p>When your identity account is set up, you’ll be sent back to GOV.UK so you can safely and securely {{serviceNameLower}}.</p>
 
-						  <p>You only need to set up one digital identity, next time you just sign in with your username and password.</p>
+						  <p>You only need to set up one identity account, next time you just sign in with your username and password.</p>
 
   					</div>
   				</details>
@@ -74,17 +74,17 @@
 
 			  <div class="form-group">
 			    <div class="actions">
-			      <input class="button" id="next-button" type="submit" value="Choose a digital identity">
+			      <input class="button" id="next-button" type="submit" value="Choose a identity account">
 			    </div>
 			  </div>
 			</form>
 
  <details role="group">
         <summary role="button" aria-controls="details-content-0" aria-expanded="false">
-          <span class="summary">Where can I use my digital identity?</span>
+          <span class="summary">Where can I use my identity account?</span>
         </summary>
         <div class="panel panel-border-narrow" id="details-content-0" aria-hidden="true">
-          <p>You can use your digital identity to:</p>
+          <p>You can use your identity account to:</p>
           <ul class="list list-bullet">
             <li>complete your Self Assessment</li>
             <li>check your State Pension</li>
