--- a/app/views/hub/verify-signin-picker.html
+++ b/app/views/hub/verify-signin-picker.html
@@ -6,11 +6,11 @@
 {% block slide_content %}
 <h1>Sign in with GOV.UK Verify</h1>
 
-<form id="start-page-form" class="js-validate" novalidate="novalidate" action="/hub/about" accept-charset="UTF-8" method="get">
+<form id="start-page-form" class="js-validate" novalidate="novalidate" action="/hub/journey" accept-charset="UTF-8" method="get">
 
   {{ formData | safe }}
 
-
+        
 
   <div class="form-group">
     <fieldset class="block">
