--- a/app/views/hub/verify-success.html
+++ b/app/views/hub/verify-success.html
@@ -12,11 +12,11 @@
  		<div class="column-two-thirds">
   		
 
-	<h1 class="heading-large">You've set up your digital identity</h1>
+	<h1 class="heading-large">You've set up your identity account</h1>
 
-	<p>You’ve set up your {{idpAccountName}} digital identity so now you can continue to {{serviceNameLower}}.</p>
+	<p>You’ve set up your {{idpName}} identity account so now you can continue to {{serviceNameLower}}.</p>
 
-  <p>In the future you can use your digital identity wherever you see the GOV.UK Verify logo.</p>
+  <p>In the future you can use your identity account wherever you see the GOV.UK Verify logo.</p>
 
 
 <form id="start-page-form" class="js-validate" novalidate="novalidate" action="/hub/third-cycle-matching{{formQuery}}" accept-charset="UTF-8" method="get">
