--- a/app/views/idp/idp-verified.html
+++ b/app/views/idp/idp-verified.html
@@ -22,7 +22,7 @@
 
 					<p>We're confident it's you accessing the government service, and not someone pretending to be you. You can continue to GOV.UK.</p>
 
-					<p>You can now sign in with your IDP NAME digital identity whenever you see the GOV.UK Verify logo.</p>
+					<p>You can now sign in with your {{idpName}} identity account whenever you see the GOV.UK Verify logo.</p>
 
 					<p>
 						<img src="/public/images/govuk-verify-small-black-text.png" alt="">
