--- a/app/views/idp/pause-warning.html
+++ b/app/views/idp/pause-warning.html
@@ -22,7 +22,7 @@
       
 			{{ formData | safe }}
 
-      <a href="/hub/verification-paused{{formQuery}}" class="button">Yes, save and return to GOV.UK</a> or <a href="javascript:history.back()">No, continue my verification</a>
+      <a href="/hub/verify-paused{{formQuery}}&saml=pending" class="button">Yes, save and return to GOV.UK</a> or <a href="javascript:history.back()">No, continue my verification</a>
 
 		</div>
 	</div>
