--- a/app/views/idp/security-code-enter.html
+++ b/app/views/idp/security-code-enter.html
@@ -29,7 +29,7 @@
 				
 				<p>It may take a minute or so to arrive.</p>
 
-				<form id="main-form" action="/idp/name{{formQuery}}" method="get">
+				<form id="main-form" action="/idp/journey{{formQuery}}" method="get">
 					
 					{{ formData|safe }}
 
