--- a/app/views/idp/sign-up.html
+++ b/app/views/idp/sign-up.html
@@ -17,7 +17,7 @@
 			<h1 class="heading-xlarge ">Sign up to GOV.UK Verify Free, safe and secure.</h1>
 			<div class="form-group">
 
-				<h2 class="heading-medium" style="font-weight: lighter; font-size:24px;" >Create your digital identity</h2>
+				<h2 class="heading-medium" style="font-weight: lighter; font-size:24px;" >Create your identity account</h2>
 				
 
 				<form id="main-form" action="/idp/security-code{{formQuery}}" method="get">
@@ -54,7 +54,7 @@
 						</div>
 					</div>
 					
-					<p>If you already have a {{idpName}} digital identity you can <a href="{{baseURL}}/sign-in{{formQuery}}">sign in</a>.</p>
+					<p>If you already have a {{idpName}} identity account you can <a href="{{baseURL}}/sign-in{{formQuery}}">sign in</a>.</p>
 
 				</form>
 				
