--- a/app/views/idp/verify-failed.html
+++ b/app/views/idp/verify-failed.html
@@ -34,7 +34,7 @@
       <p>Your credit score has not been affected in any way during this process.</p>
 
       {% if data['usersLOA'] == '1' %}
-        <h3>You can still use your {{idpName}} digital identity to access government services that don’t require the extra evidence.</h3>
+        <h3>You can still use your {{idpName}} identity account to access government services that don’t require the extra evidence.</h3>
         </br>
       {% endif %}
         
