--- a/app/views/hub/setting-up-more-info.html
+++ b/app/views/hub/setting-up-more-info.html
@@ -11,20 +11,20 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
-      <h1 class="heading-large">How to set up your digital identity</h1>
+      <h1 class="heading-large">How to set up your identity account</h1>
 
      
-  <h2 class="heading-medium">1. Choose the digital identity you want to set up</h2>
+  <h2 class="heading-medium">1. Choose the identity account you want to set up</h2>
 
-  <p>Each digital identity has different requirements, so we’ll ask you some questions so we can list the ones that will work for you. </p>
+  <p>Each identity account has different requirements, so we’ll ask you some questions so we can list the ones that will work for you. </p>
 
-  <p>When you choose the digital identity you want to set up, we’ll send you to their website.</p>
+  <p>When you choose the identity account you want to set up, we’ll send you to their website.</p>
 
 
 
-  <h2 class="heading-medium">2. Confirm your details to set up your digital identity</h2>
+  <h2 class="heading-medium">2. Confirm your details to set up your identity account</h2>
 
-  <p>The first first thing you will do is create a username and password. This is so you can reuse your digital identity wherever you see the GOV.UK Verify logo.</p>
+  <p>The first first thing you will do is create a username and password. This is so you can reuse your identity account wherever you see the GOV.UK Verify logo.</p>
 
   <p>You need to provide some personal details, including identity documents if you have them, so they can be double checked against records held by mobile phone providers, credit agencies, HM Passport Office or DVLA for example.</p>
 
@@ -32,9 +32,9 @@
 
   <h2 class="heading-medium">3. Continue to GOV.UK to access {{serviceNameLower}}</h2>
 
-  <p>When your digital identity is set up, you will be sent  back to GOV.UK so you can safely and securely {{serviceNameLower}}.</p>
+  <p>When your identity account is set up, you will be sent  back to GOV.UK so you can safely and securely {{serviceNameLower}}.</p>
 
-  <p>You only need to set up one digital identity, next time you just sign in with your username and password.</p>
+  <p>You only need to set up one identity account, next time you just sign in with your username and password.</p>
 
   <br>
 
@@ -43,17 +43,17 @@
 
         <div class="form-group">
           <div class="actions">
-            <input class="button" id="next-button" type="submit" value="Select your digital identity">
+            <input class="button" id="next-button" type="submit" value="Select your identity account">
             <span style="display:inline-block; margin-top: 10px; padding-left: 5px; font-size: 19px">
           </div>
         </div>
       </form>
       <details role="group">
         <summary role="button" aria-controls="details-content-0" aria-expanded="false">
-          <span class="summary">Where can I use my digital identity?</span>
+          <span class="summary">Where can I use my identity account?</span>
         </summary>
         <div class="panel panel-border-narrow" id="details-content-0" aria-hidden="true">
-          <p>You can use your digital identity to:</p>
+          <p>You can use your identity account to:</p>
           <ul class="list list-bullet">
             <li>complete your Self Assessment</li>
             <li>check your State Pension</li>
