--- a/app/views/hub/sm-signin.html
+++ b/app/views/hub/sm-signin.html
@@ -12,14 +12,14 @@
     <div class="grid-row">      
         <div class="column-two-thirds" style="">
               
-          <h1 class="heading-large">{{serviceName}} with your digital identity</h1>
+          <h1 class="heading-large">{{serviceName}} with your identity account</h1>
         </div>
     </div>
     <div class="grid-row">
       <div class="column-half">
-        <h2 class="heading-medium">Set up a digital identity</h2>
-        <p>Set up a digital identity so you can securely sign in to {{serviceNameLower}}.</p>
-        <p>If you don’t have a digital identity, you can set one up here. You need to:</p>
+        <h2 class="heading-medium">Set up a identity account</h2>
+        <p>Set up a identity account so you can securely sign in to {{serviceNameLower}}.</p>
+        <p>If you don’t have a identity account, you can set one up here. You need to:</p>
 
         <ul class="list list-bullet">
           <li>be over 18 years old</li>
@@ -28,7 +28,7 @@
 
         <form id="" class="js-validate" novalidate="novalidate" action="/hub/setting-up-verify{{formQuery}}" accept-charset="UTF-8" method="get">
           {{formData | safe}}
-          <input class="button" id="next-button" type="submit" value="Set up a digital identity">
+          <input class="button" id="next-button" type="submit" value="Set up a identity account">
           <input type="hidden" name="registration" value="true">
         </form>
         <br>
@@ -36,7 +36,7 @@
          
       </div>
       <div class="column-half">
-          <h2 class="heading-medium">If you already have a digital identity</h2>
+          <h2 class="heading-medium">If you already have a identity account</h2>
           <p>Sign in with:</p>
 
 
@@ -73,7 +73,7 @@
 
               <p>Companies that provide digital identities apply to be part of GOV.UK Verify. They are certified when they meet security and privacy standards set by government so you can trust them with your personal information.</p>
 
-              <p>When a government service uses GOV.UK Verify, you can access the service with the digital identity you set up.</p>
+              <p>When a government service uses GOV.UK Verify, you can access the service with the identity account you set up.</p>
             </div>
           </details>
 
