Added name to email input

--- a/app/views/idp/sign-up.html
+++ b/app/views/idp/sign-up.html
@@ -26,7 +26,7 @@
 
 					<div class="form-group" data-required="Please enter your email address">
 						<label class="form-label" >Email address</label>
-					<input class="form-control" type="text" placeholder="Enter your email address" style="width:460px;">
+					<input class="form-control" type="text" placeholder="Enter your email address" name='email' style="width:460px;">
 					</div>
 			
 					<div class="form-group" data-required="Please enter your password">
